--- a/code/blogspot/Tools/photos-upload.html
+++ b/code/blogspot/Tools/photos-upload.html
@@ -10,7 +10,7 @@
     <div dir="ltr" style="text-align: left;" trbidi="on">
     <div dir="ltr" style="text-align: left;" trbidi="on">
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://code.jquery.com/jquery-1.10.1.js" type="text/javascript"></script>
-    <!--zzImgUr plugin has updated js dropbox without re-upload because it does not delete--> <script src="https://kenbtec.github.io/uploadImg/upload.js" type="text/javascript"></script><style>
+    <!--zzImgUr plugin has updated js dropbox without re-upload because it does not delete--> <script src="https://cdn.trung.gq/code/blogspot/Tools/upload.js" type="text/javascript"></script><style>
         /*
      * jQuery plugin zzImgUr ver 1.6 by NhatTrung
      * http://www.trung.gq
